--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 
 <html>
+  
+  <FRAMESET
+ROWS="rivimäärittely"
+COLS="sarakemäärittely">
+FRAMEBORDER="0"
+BORDER="0"
+
+<FRAME SRC="dokumentti"
+tunniste"
+MARGINWIDTH="reunamarginaali"
+MARGINHEIGHT="pystymarginaali"
+SCROLLING="yes | no | auto"
+BORDERCOLOR=""
+NORESIZE>
+</FRAMESET>
+  
 <body>
 
 <h1>Mark härö on homo</h1>
