--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <h1>Tervetuloa</h1>
 <p>Hienoa</p>
+  
+  <iframe allowtransparency="true" frameborder="0" hspace="0" vspace="0" marginheight="0" marginwidth="0" scrolling="no" width="234" height="60" src="https://localbitcoins.com/ad-embed/545826/half-banner"></iframe>
 
 </body>
 </html>
